--- a/src/main/resources/templates/user/registerSuccess.html
+++ b/src/main/resources/templates/user/registerSuccess.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <title>User</title>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
+    <title>Success</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
@@ -13,21 +11,18 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="register.css">
 </head>
-
 <body>
 
-<nav th:replace="fragments/header :: header">
-
-</nav>
-
-<div class="container">
-    <div class="jumbotron">
-        <h1 class="text-center">Welcome on the USER PANEL</h1>
-        <br/>
-        <br/><br/>
-
-        <p th:text="'Collected points: ' + ${points}"></p>
+<div class="container d-block mx-auto">
+    <div class="successMessage">
+        <h1 class="text-center text-success" th:text="'Registration Success!'"></h1>
+        <h3 class="text-center text-white" th:text="'Now you can log in to your accont. Please go to the link below'"></h3>
+        <div class="text-center">
+        <a th:href="@{'/login'}" th:text="'Login Page'" class="btn btn-outline-success btn-lg"> </a>
+        </div>
     </div>
 </div>
 
