--- a/src/main/resources/templates/user/userPanel.html
+++ b/src/main/resources/templates/user/userPanel.html
@@ -23,11 +23,62 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1 class="text-center">Welcome on the USER PANEL</h1>
-        <br/>
-        <br/><br/>
+        <h1 class="text-center mb-4" th:text="'User Panel'"></h1>
+        <div class="row justify-content-center mt-3">
+            <div class="card-deck">
+                <div class="card border-success mb-3" style="max-width: 18rem;">
+                    <div class="card-header text-center" th:text="'Success'"></div>
+                    <div class="card-body text-success text-center">
+                        <h5 class="card-title" th:text="'YOUR ACHIEVEMENTS'"></h5>
+                        <ul class="card-text">
+                            <li th:text="'Correct answers: '+${correctAnswers}"></li>
+                            <li  th:text="'Points for posts: '+${postsPoints}"></li>
+                            <li  th:text="'Points for answers: '+${answersPoints}"></li>
+                        </ul>
+                    </div>
+                </div>
 
-        <p th:text="'Collected points: ' + ${points}"></p>
+                <div class="card border-danger mb-3" style="max-width: 18rem;">
+                    <div class="card-header text-center" th:text="'Look out!'"></div>
+                    <div class="card-body text-danger text-center">
+                        <h5 class="card-title" th:text="'NEGATIVE POINTS'"></h5>
+                        <p class="card-text"
+                           th:text="'You have collected '+${negativePoints}+' negative points, try to to take care for answers and posts that you are adding'"></p>
+                    </div>
+                </div>
+
+                <div class="card border-info mb-3" style="max-width: 18rem;">
+                    <div class="card-header text-center" th:text="'Informations'"></div>
+                    <div class="card-body text-info text-center">
+                        <h5 class="card-title" th:text="'INFORMATION ABOUT YOUR ACTIVITY'"></h5>
+                        <ul>
+                            <li class="card-text" th:text="'Added posts: '+${addedPosts}"></li>
+                            <li class="card-text" th:text="'Added answers: '+${addedAnswers}"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- links -->
+        <div class="d-flex">
+            <div class="mr-auto p-4">
+                <h3 class="text-primary text-center mb-4" th:text="'Your Posts'"></h3>
+                <th:block th:each="post:${posts}">
+                    <a th:href="@{'/posts/post/'}+${post.id}" th:text="${post.title}"
+                       class="btn btn-outline-primary btn-lg btn-block">Post</a>
+                </th:block>
+            </div>
+
+            <div class="p-4">
+                <h3 class="text-primary text-center mb-4" th:text="'Your Answers'"></h3>
+                <th:block th:each="answer:${answers}">
+                    <a th:href="@{'/posts/answer/'}+${answer.id}" th:text="${answer.created}"
+                       class="btn btn-outline-primary btn-lg btn-block">Post</a>
+                </th:block>
+
+            </div>
+        </div>
     </div>
 </div>
 
