--- a/src/main/resources/templates/user/userPanel.html
+++ b/src/main/resources/templates/user/userPanel.html
@@ -43,7 +43,7 @@
                     <div class="card-body text-danger text-center">
                         <h5 class="card-title" th:text="'NEGATIVE POINTS'"></h5>
                         <p class="card-text"
-                           th:text="'You have collected '+${negativePoints}+' negative points, try to to take care for answers and posts that you are adding'"></p>
+                           th:text="'You have collected '+${negativePoints}+' negative point(s), try to take care for answers and posts that you are adding'"></p>
                     </div>
                 </div>
 
