Securing database connection. Bg image refactoring. Closes #8

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url("https://i.imgur.com/ptpdMnm.jpg");
+    background-image: url("https://i.imgur.com/f1Gwg8D.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
