Adding pictures author name

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    /* Photo by Jeremy Bishop on Unsplash */
     background-image: url("https://i.imgur.com/f1Gwg8D.jpg");
     background-repeat: no-repeat;
     background-size: cover;
